--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@mui/material": "^5.15.18",
     "axios": "^1.7.1",
     "googleapis": "^137.1.0",
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.0",
     "next": "^14.2.5",
     "papaparse": "^5.4.1",
     "punycode": "^2.3.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^15.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
